--- a/client/src/pages/CreateRecipe/CreateRecipe.module.scss
+++ b/client/src/pages/CreateRecipe/CreateRecipe.module.scss
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
   padding: 2rem 1rem 3rem;
-  min-height: 100vh;
+  min-height: 100%;
   background-color: #1F1D1E;
   gap: 1rem;
   min-width: 0;
