--- a/client/src/pages/MemberInterface/MembreInterface.module.scss
+++ b/client/src/pages/MemberInterface/MembreInterface.module.scss
@@ -6,7 +6,7 @@
   flex-direction: column;
   align-items: center;
   padding: 1.4rem 1rem 2.8rem;
-  min-height: 100vh;
+  min-height: 100%;
   background-image: linear-gradient(rgba(31, 29, 30, 0.9), rgba(31, 29, 30, 0.9)), url('/img/rocky-wall.png');
   background-size: cover;
   background-position: center;
