--- a/client/src/pages/PolitiqueConfidentialite/PolitiqueConfidentialite.module.scss
+++ b/client/src/pages/PolitiqueConfidentialite/PolitiqueConfidentialite.module.scss
@@ -4,7 +4,7 @@
   max-width: 800px;
   margin: 0 auto;
   padding: 3rem 1.5rem;
-  min-height: 100vh;
+  min-height: 100%;
   background-image: linear-gradient(rgba(31, 29, 30, 0.9), rgba(31, 29, 30, 0.9)), url('/img/rocky-wall.png');
   background-size: cover;
   background-position: center;
