--- a/client/src/pages/Profil/Profil.module.scss
+++ b/client/src/pages/Profil/Profil.module.scss
@@ -5,7 +5,7 @@
   flex-direction: column;
   align-items: center;
   padding: 2rem 1rem 3rem;
-  min-height: 100vh;
+  min-height: 100%;
   background-color: #1F1D1E;
 }
 
